# lolo_agents_team

./: .gitignore  README.md  package-lock.json
.cursor/rules/: mcp-recherche-global.mdc  mcp-recherche-python.mdc  mcp-recherche-yaml.mdc
biz_sniper/: README.md  crew_mcp_recherche.py  mcp_adapter.py  package-lock.json  pyproject.toml  test_mcp_adapter.py
biz_sniper/src/: mcp-test.js
biz_sniper/src/biz_sniper/: crew.py  main.py
fiche_prospection/: README.md  outreach_message.md  pyproject.toml  report.md  research_company.md
fiche_prospection/src/fiche_prospection/: crew.py  main.py
fiche_prospection/src/fiche_prospection/config/: agents.yaml  tasks.yaml
mcp_re/: README.md  mcp_simple_test.py  montpellier_informatique_50_250.csv  pyproject.toml  test_mcp_rechercheWINNER.py
mcp_re/src/mcp_re/: crew.py  main.py
mcp_re/src/mcp_re/config/: agents.yaml  tasks.yaml
soa_agent/: README.md  pyproject.toml  report.md
soa_agent/src/soa_agent/: crew.py  main.py
soa_agent/src/soa_agent/config/: agents.yaml  tasks.yaml
