[project]
name = "biz_sniper"
version = "0.1.0"
description = "biz_sniper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
biz_sniper = "biz_sniper.main:run"
run_crew = "biz_sniper.main:run"
train = "biz_sniper.main:train"
replay = "biz_sniper.main:replay"
test = "biz_sniper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
