[project]
name = "mcp_re"
version = "0.1.0"
description = "mcp-re using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[mcp]>=0.71.0",
    "crewai[tools]>=0.186.1,<1.0.0",
    "mcp>=1.14.0",
]

[project.scripts]
mcp_re = "mcp_re.main:run"
run_crew = "mcp_re.main:run"
train = "mcp_re.main:train"
replay = "mcp_re.main:replay"
test = "mcp_re.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
