[project]
name = "soa_agent"
version = "0.1.0"
description = "soa_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
soa_agent = "soa_agent.main:run"
run_crew = "soa_agent.main:run"
train = "soa_agent.main:train"
replay = "soa_agent.main:replay"
test = "soa_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
